--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,55 +1,215 @@
-*{
-    color: white;
-    font-family: "Slabo 13px", serif;
+* {
+    font-family: "Space Mono", monospace;
+    font-weight: 700;
     font-style: normal;
-    overflow: hidden;
 }
-body{
-    background-color: rgb(0, 0, 0);
-}
-nav{
+
+body {
+    transition: background-color 0.5s ease, color 0.5s ease;
+    color: black;
+    background: linear-gradient(to right,
+            rgb(240, 238, 238) 78.88%,
+            rgb(0, 0, 0) 78.88% 100%);
 
 }
+
+#foto-perfil {
+    display: flex;
+    position: absolute;
+    width: 40rem;
+    top: 10%;
+    left: 60%;
+    height: auto;
+    border-radius: 10px;
+
+}
+
+#quadrado {
+    width: 50px;
+    height: 50px;
+    background-color: orangered;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+#quadrado2 {
+    width: 100px;
+    height: 100px;
+    background-color: rgb(95, 95, 95);
+    position: absolute;
+    top: 40vw;
+    right: 40vw;
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+#quadrado3 {
+    width: 1vw;
+    height: 1vw;
+    background-color: rgb(55, 87, 56);
+    position: absolute;
+    top: 27vw;
+    left: 15vw;
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+#quadrado4 {
+    width: 1vw;
+    height: 1vw;
+    background-color: rgb(229, 100, 37);
+    position: absolute;
+    top: 27vw;
+    left: 19vw;
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+#quadrado5 {
+    width: 1vw;
+    height: 1vw;
+    background-color: rgb(96, 91, 87);
+    position: absolute;
+    top: 27vw;
+    left: 23vw;
+    transition: background-color 0.5s ease, color 0.5s ease;
+
+}
+
+#risco {
+    width: 37vw;
+    height: 4px;
+    background-color:rgb(55, 87, 56);
+    position: absolute;
+    top: 20vw;
+    left: 15vw;
+}
+
+#risco2 {
+    width: 29vw;
+    height: 4px;
+    background-color: rgb(229, 100, 37);
+    position: absolute;
+    top: 21vw;
+    left: 23vw;
+}
+
+#risco3 {
+    width: 15vw;
+    height: 4px;
+    background-color: rgb(96,91,87);
+    position: absolute;
+    top: 22vw;
+    left: 37vw;
+}
+
+#nome {
+    position: absolute;
+    top: 14vw;
+    left: 15vw;
+    font-size: 50px;
+
+}
+
+#ano {
+    position: absolute;
+    top: 17vw;
+    left: 15vw;
+    font-size: 50px;
+
+}
+
 .switch {
-    width: 35px;/**/
-    height: 20px;/**/
-    background-color: #4d4d4d;/**/
-    border-radius: 10px;/**/
-    position: relative;/**/
-    cursor: pointer;/**/
-    margin: 10px;/**/
+    width: 35px;
+    /**/
+    height: 20px;
+    /**/
+    background-color: #4d4d4d;
+    /**/
+    border-radius: 10px;
+    /**/
+    position: relative;
+    /**/
+    cursor: pointer;
+    /**/
+    margin: 10px;
+    /**/
 }
 
 .switch .indicador {
-    width: 20px;/**/
-    height: 20px;/**/
-    background-color: black;/**/
-    border-radius: 50%;/**/
-    transform: scale(.9);/**/
-    position: absolute;/**/
-    left: 0;/**/
-    transition: 0.5s;/**/
-    
+    width: 20px;
+    /**/
+    height: 20px;
+    /**/
+    background-color: black;
+    /**/
+    border-radius: 50%;
+    /**/
+    transform: scale(.9);
+    /**/
+    position: absolute;
+    /**/
+    left: 0;
+    /**/
+    transition: 0.5s;
+    /**/
+
 }
 
 .switch.light {
-    background-color: rgb(77, 77, 77);/**/
-    
+    background-color: rgb(77, 77, 77);
+    /**/
+
 }
 
 .switch.light .indicador {
-    left: 15px;/**/
-    background-color: white;/**/
+    left: 15px;
+    /**/
+    background-color: white;
+    /**/
 }
 
 body.light {
-    background-color: #8f8f8f;/**/
-    
+    color: white;
+    background: linear-gradient(to right,
+            rgb(0, 0, 0) 78.88%,
+            rgb(240, 238, 238) 78.88% 100%)
 }
-/*até aqui é o modo noturno*/
-/*aqui diz sobre a fonte utilizada*/
-.slabo-13px-regular {
-    font-family: "Slabo 13px", serif;/**/
-    font-weight: 400;/**/
-    font-style: normal;/**/
+
+body.light #quadrado {
+    background-color: rgb(95, 95, 95);
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+body.light #quadrado2 {
+    background-color: orangered;
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+body.light #risco {
+    background-color: rgb(1, 80, 1);
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+.space-mono-regular {
+    font-family: "Space Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.space-mono-bold {
+    font-family: "Space Mono", monospace;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.space-mono-regular-italic {
+    font-family: "Space Mono", monospace;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.space-mono-bold-italic {
+    font-family: "Space Mono", monospace;
+    font-weight: 700;
+    font-style: italic;
 }
