--- a/css/start/start-styles.css
+++ b/css/start/start-styles.css
@@ -1,186 +1,58 @@
-:root {
-    --cor-verdestara: rgb(55, 87, 56);
-    --cor-laranjastara: rgb(229, 100, 37);
-    --cor-chumbostara: rgb(96, 91, 87);
+body {
+  color: white;
+  margin: 0;
+  padding: 0;
+  font-family: "Space Mono", monospace;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Ocupa 100% da altura da tela */
+  position: relative;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+/* Logo da Stara */
+#stara {
+  position: absolute;
+  width: 5%;
+  height: auto;
+  left: 3%;
+  top: 3%;
 }
 
-
-#quadrado1 {
-    border: 2px solid black;
-    position: absolute;
-    width: 24rem;
-    height: 30rem;
-    background-color: var(--cor-verdestara);
-    left: 110rem;
-    border-radius: 1rem;
-}
-
-#quadrado2 {
-    border: 2px solid black;
-    position: absolute;
-    width: 90rem;
-    height: 2rem;
-    background-color: var(--cor-verdestara);
-    left: 55rem;
-    top: 65rem;
-    border-radius: 1rem;
-
-}
-
-#quadrado3 {
-    border: 2px solid black;
-    position: absolute;
-    width: 1rem;
-    height: 1rem;
-    background-color: var(--cor-chumbostara);
-    border-radius: 5rem;
-    top: 4rem;
-    left: 20rem;
-}
-
-#quadrado4 {
-    border: 2px solid black;
-    position: absolute;
-    width: 1rem;
-    height: 1rem;
-    background-color: var(--cor-laranjastara);
-    border-radius: 5rem;
-    top: 4rem;
-    left: 23rem;
-}
-
-#quadrado5 {
-    border: 2px solid black;
-    position: absolute;
-    width: 1rem;
-    height: 1rem;
-    background-color: var(--cor-verdestara);
-    border-radius: 5rem;
-    top: 4rem;
-    left: 26rem;
-}
-
-#quadrado6 {
-    border: 2px solid black;
-    position: absolute;
-    width: 80rem;
-    height: 30rem;
-    border-radius: 1rem;
-    top: 7rem;
-    left: 8rem;
-}
-
-#risco1 {
-    position: absolute;
-    width: 5px;
-    height: 50rem;
-    background-color: var(--cor-verdestara);
-    border-radius: 1rem;
-    top: 20rem;
-    left: 1rem;
-}
-
-#risco2 {
-    position: absolute;
-    width: 5px;
-    height: 40rem;
-    background-color: var(--cor-verdestara);
-    border-radius: 1rem;
-    top: 27rem;
-    left: 2rem;
-}
-
-#risco3 {
-    position: absolute;
-    width: 5px;
-    height: 30rem;
-    background-color: var(--cor-verdestara);
-    border-radius: 1rem;
-    top: 37rem;
-    left: 3rem;
-}
-
-#risco4 {
-    position: absolute;
-    width: 5px;
-    height: 20rem;
-    background-color: var(--cor-verdestara);
-    border-radius: 1rem;
-    top: 47rem;
-    left: 4rem;
-}
-
-#risco5 {
-    position: absolute;
-    width: 5px;
-    height: 10rem;
-    background-color: var(--cor-verdestara);
-    border-radius: 1rem;
-    top: 57rem;
-    left: 5rem;
-}
-
-#foto-perfil {
-    background-color: transparent;
-}
-
+/* Texto Centralizado */
 #text {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    top: 10rem;
-    left: 10rem;
-
+  text-align: center;
 }
 
-#title {
-    font-size: 2rem;
-}
-
-#desc {
-    font-size: 1rem;
-}
-
-
-#questionario {
-    display: inline-block;  
-    position: absolute;
-    top: 20rem;
-    left:10rem;
-    text-decoration: none;
-    color: black;
-    border: 2px solid ;
-    border-radius: 1rem;
-    background-color: rgba(55, 87, 56, 0.575);
-    padding: 5px;
-    transition: 0.3s ease;
-}
-#questionario:hover{
-    background-color: var(--cor-laranjastara);
-}
+/* Botão "Sobre" centralizado abaixo do texto */
 #sobre {
-    text-decoration: none;
-    color: black;
+  display: inline-block;
+  text-decoration: none;
+  color: white;
+  border: 2px solid white;
+  border-radius: 5px;
+  margin-top: 1rem;
+  padding: 0.5rem 2rem;
 }
-#maquina{
-    position: absolute;
-    width: 20rem;
-    height: 12rem;
-    right: -50%;
-    background-color: transparent;
-    animation: moverDaEsquerda 5s linear infinite;
+#projetos{
+  display: inline-block;
+  text-decoration: none;
+  color: white;
+  border: 2px solid white;
+  border-radius: 5px;
+  margin-top: 1rem;
+  padding: 0.5rem 2rem;
 }
-@keyframes moverDaEsquerda {
-  0% {
-    right: -50px; /* começa fora da tela à esquerda */
-  }
-  100% {
-    right: 100vw; /* termina fora da tela à direita */
-  }
+/* Título "Portfólio" */
+#portfólio {
+  position: absolute;
+  top: 3%;
+  right: 3%;
+  font-size: 2rem;
+  color: white;
+}
+#recado{
+  position: absolute;
+  top: 90%;
+  left: 1%;
 }
